--- a/style.css
+++ b/style.css
@@ -4,14 +4,39 @@ body {
     justify-content: center;
     align-items: center;
 }
+h1 {
+    width: 800px;
+    text-align: center;
+}
 #container {
+    display: flex;
+    flex-direction: column;
+    width:800px;
+    align-items: center;
+}
+#menu {
+    box-sizing: border-box;
+    display: flex;
+    margin: 20px;
+    gap: 10px;
+}
+#sketchpad {
     display: flex;
     flex-wrap: wrap;
     width: 500px;
     height: 500px;
-    border: 1px solid blue;
+    border: 1px solid red;
 }
-#container div {
+#sketchpad div {
     box-sizing: border-box;
-    border: 1px solid black;
+}
+
+button {
+    font-size: 15px;
+    background-color: white;
+    border: 1px solid;
+    transition-duration: 0.4s;
+}
+button:hover {
+    background-color: #e7e7e7;
 }
